# tortoise-testing

./: .gitignore  :memory  README.md  db.sqlite3  enum_field.py  example.sqlite3  filtering.py  group_by  prefetch.py  pydantic_meta.py  pyproject.toml  schema_creation.py
from_docs/: basic.py  example1.sqlite3  pydantic_basic.py  pydantic_relations_early_init.py  relation_unique.py
test_relations/: main.py  minimal_random_data.json  models.py  random_data.json
tortoise_examples/: comments.py  functions.py  pydantic_relations_early_init.py  relations.py  router.py  transactions.py
