[tool.poetry]
name = "tortoise-test"
version = "0.1.0"
description = ""
authors = ["Falk <gammalget@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
tortoise-orm = "^0.17.8"
black = "^21.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
